--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,2 +1,9 @@
-@import "base/base";
 @import "abstract/constants";
+@import "base/base";
+
+// Layouts
+@import "layout/wrapper";
+@import "layout/header";
+
+// Components
+@import "components/contact-us";
