--- a/scss/style.css
+++ b/scss/style.css
@@ -1,3 +1,7 @@
+.logo-path, .button {
+  transition: all 0.3s ease-out;
+}
+
 html {
   font-size: 10px;
 }
@@ -52,14 +56,13 @@ h5 {
   line-height: 2.2rem;
   border-radius: 4px;
   cursor: pointer;
-  transition: all 0.3s;
 }
 
-.heaader__buttons .button {
+.header__buttons .button {
   margin-left: 14px;
 }
 
-.heaader__buttons .button:first-child {
+.header__buttons .button:first-child {
   margin-left: 0;
 }
 
@@ -83,6 +86,10 @@ h5 {
 .button_bordered:hover {
   background: #BCD0E5;
   border-color: #BCD0E5;
+}
+
+.logo-svg:hover .logo-path {
+  fill: #FF9900;
 }
 
 .wrapper {
