--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,8 +1,11 @@
 @import "abstract/constants";
+@import "abstract/mixins";
+@import "abstract/placeholders";
 
 // Buttons
 @import "base/base";
 @import "base/buttons";
+@import "base/logo";
 
 // Layouts
 @import "layout/wrapper";
