--- a/scss/base/_base.scss
+++ b/scss/base/_base.scss
@@ -6,39 +6,24 @@ body {
   font-size: 1.6rem;
   font-family: 'Open Sans', Verdana, sans-serif;
 }
-
+// @include mixin font ($size: font-size, $style: font-style, $weight: font-weight, $height: line-height)
 h1 {
-  font-family: 'Poppins', Verdana, sans-serif;
-  font-size: 44px;
-  font-style: normal;
-  font-weight: 700;
-  line-height: 54px;
+  @extend %font-add;
+  @include font(4.4rem, normal, 700, 5.4rem);
 }
 
 h2 {
-  font-size: 34px;
-  font-style: normal;
-  font-weight: 700;
-  line-height: normal;
+  @include font(3.4rem);
 }
 
 h3 {
-  font-size: 24px;
-  font-style: normal;
-  font-weight: 700;
-  line-height: 34px;
+  @include font($size: 2.4rem, $height: 3.4rem);
 }
 
 h4 {
-  font-size: 22px;
-  font-style: normal;
-  font-weight: 600;
-  line-height: normal;
+  @include font($size: 2.2rem, $weight: 600);
 }
 
 h5 {
-  font-size: 16px;
-  font-style: normal;
-  font-weight: 700;
-  line-height: 26px;
+  @include font($size: 1.6rem, $height: 2.6rem);
 }
