refactor: button style from css to scss & add nav style

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -17,6 +17,7 @@
 // Components
 @import "components/contact-us";
 @import "components/promo";
+@import "components/navigation";
 
 * {
   box-sizing: border-box;
