--- a/scss/base/_buttons.scss
+++ b/scss/base/_buttons.scss
@@ -8,6 +8,28 @@
   border-radius: 4px;
   cursor: pointer;
   @extend %transition;
+
+  &_bordered {
+    background: $color-light;
+    border: 1px solid $color-border;
+    color: $color-text;
+
+    &:hover {
+      background: $color-hovered;
+      border-color: $color-hovered;
+    }
+  }
+
+  &_colored {
+    background: $color-primary;
+    color: $color-light;
+    border: 1px solid $color-primary;
+
+    &:hover {
+      background: $color-addition;
+      border-color: $color-addition;
+    }
+  }
 }
 
 .header__buttons .button {
@@ -18,24 +40,3 @@
   margin-left: 0;
 }
 
-.button_bordered {
-  background: $color-light;
-  border: 1px solid $color-border;
-  color: $color-text;
-}
-
-.button_colored {
-  background: $color-primary;
-  color: $color-light;
-  border: 1px solid $color-primary;
-}
-
-.button_colored:hover {
-  background: $color-addition;
-  border-color: $color-addition;
-}
-
-.button_bordered:hover {
-  background: $color-hovered;
-  border-color: $color-hovered;
-}
