--- a/scss/abstract/_placeholders.scss
+++ b/scss/abstract/_placeholders.scss
@@ -5,3 +5,7 @@
 %font-add {
   font-family: 'Poppins', Verdana, sans-serif;
 }
+
+%font-primary {
+  font-family: "Open Sans", Verdana, sans-serif;
+}
