--- a/scss/base/_icons.scss
+++ b/scss/base/_icons.scss
@@ -8,3 +8,52 @@
   width: 18px;
   height: 19px;
 }
+
+.icon-square {
+  width: 50px;
+  height: 50px;
+  border-radius: 19px;
+  display: inline-flex;
+  align-items: center;
+  justify-content: center;
+
+  &_yellow {
+    background-color: $color-yellow;
+  }
+
+  &_red {
+    background-color: $color-red;
+  }
+
+  &_blue {
+    background-color: $color-blue;
+  }
+
+  &_violet {
+    background-color: $color-violet;
+  }
+}
+
+.ico_arrow {
+  background-image: url("../img/icons/arrow.svg");
+  width: 12px;
+  height: 17px;
+}
+
+.ico_snake {
+  background-image: url("../img/icons/snake.svg");
+  width: 12px;
+  height: 17px;
+}
+
+.ico_heart {
+  background-image: url("../img/icons/heart.svg");
+  width: 12px;
+  height: 17px;
+}
+
+.ico_clock {
+  background-image: url("../img/icons/clock.svg");
+  width: 12px;
+  height: 17px;
+}
