feat: strategies section styled

--- a/scss/components/_tools.scss
+++ b/scss/components/_tools.scss
@@ -1,7 +1,7 @@
 // global tools
 .tools__wrapper {
   padding-bottom: 90px;
-  background: url(../../img/backgrounds/tools-bg.svg) no-repeat center bottom;
+  background: url(../img/backgrounds/tools-bg.svg) no-repeat center bottom;
 }
 
 .tools__title {
