--- a/scss/style.scss
+++ b/scss/style.scss
@@ -10,6 +10,7 @@
 @import "base/buttons";
 @import "base/logo";
 @import "base/icons";
+@import "base/tags";
 
 // Layouts
 @import "layout/wrapper";
@@ -21,6 +22,7 @@
 @import "components/promo";
 @import "components/navigation";
 @import "components/tools";
+@import "components/strategies";
 
 * {
   box-sizing: border-box;
