--- a/scss/style.css
+++ b/scss/style.css
@@ -93,7 +93,7 @@ pre {
  */
 a {
   background-color: transparent; /* 1 */
-  /*-webkit-text-decoration-skip: objects; !* 2 *!*/
+  -webkit-text-decoration-skip: objects; /* 2 */
 }
 
 /* Text-level semantics
@@ -104,7 +104,7 @@ a {
  */
 abbr[title] {
   border-bottom: none; /* 1 */
-  /*text-decoration: underline; !* 2 *!*/
+  text-decoration: underline; /* 2 */
   text-decoration: underline dotted; /* 2 */
 }
 
@@ -647,11 +647,36 @@ h5 {
   justify-content: space-between;
 }
 .layout-2-col > * {
-  flex-basis: 45%;
+  flex-basis: 48%;
 }
 
 .contact-us {
   background: #FFEEE1;
+  padding: 62px 82px;
+}
+
+.contact-us__form input, .contact-us__form textarea {
+  border: 1px solid #FFFFFF;
+  background-color: #FFFFFF;
+  padding: 10px 21px;
+  border-radius: 5px;
+}
+.contact-us__form input:focus, .contact-us__form textarea:focus {
+  border-color: #FF9900;
+  outline: none;
+}
+.contact-us__form textarea {
+  resize: none;
+  width: 100%;
+  height: 160px;
+}
+
+.contact-us__line {
+  margin: 0 0 19px;
+}
+
+.contact-us__button > * {
+  min-width: 117px;
 }
 
 .promo {
