--- a/scss/style.scss
+++ b/scss/style.scss
@@ -16,6 +16,7 @@
 @import "layout/wrapper";
 @import "layout/header";
 @import "layout/columns";
+@import "layout/footer";
 
 // Components
 @import "components/contact-us";
