--- a/scss/base/_icons.scss
+++ b/scss/base/_icons.scss
@@ -9,6 +9,19 @@
   height: 19px;
 }
 
+.icon-round {
+  width: 25px;
+  height: 25px;
+  border-radius: 50%;
+  display: inline-flex;
+  align-items: center;
+  justify-content: center;
+
+  &_white {
+    background-color: $color-light;
+  }
+}
+
 .icon-square {
   width: 50px;
   height: 50px;
@@ -56,4 +69,16 @@
   background-image: url("../img/icons/clock.svg");
   width: 12px;
   height: 17px;
+}
+
+.ico_phone {
+  background-image: url("../img/icons/phone.svg");
+  width: 13px;
+  height: 13px;
+}
+
+.ico_letter {
+  background-image: url("../img/icons/letter.svg");
+  width: 11px;
+  height: 11px;
 }
