--- a/scss/components/_navigation.scss
+++ b/scss/components/_navigation.scss
@@ -1,18 +1,23 @@
 
 .navigation {
   display: flex;
-  font-size: 1.5rem;
-  font-style: normal;
-  font-weight: 400;
-  line-height: 2.8rem;
+  gap: 17px;
+  padding: 0;
+  @include font($size: 1.5rem, $height: 2.8rem, $weight: normal);
 }
 
 .navigation__link {
   list-style: none;
-  padding: 0 10px;
-  @extend %transition;
-}
+  flex: 0 0 63px;
 
-a:hover {
-  color: $color-primary;
+  > a {
+    text-decoration: none;
+    color: $color-text;
+    @extend %transition;
+
+    &:hover {
+      color: $color-primary;
+    }
+  }
+
 }
