feat: about-us section styled

--- a/scss/abstract/_mixins.scss
+++ b/scss/abstract/_mixins.scss
@@ -1,4 +1,4 @@
-@mixin font($size, $style: normal, $weight: bold, $height: normal) {
+@mixin font($size, $style: normal, $weight: bold, $height: $size) {
   font-size: $size;
   font-style: $style;
   font-weight: $weight;
