--- a/scss/style.scss
+++ b/scss/style.scss
@@ -24,6 +24,7 @@
 @import "components/navigation";
 @import "components/tools";
 @import "components/strategies";
+@import "components/about-us";
 
 * {
   box-sizing: border-box;
