--- a/scss/style.css
+++ b/scss/style.css
@@ -448,7 +448,7 @@ h2 {
   font-size: 3.4rem;
   font-style: normal;
   font-weight: bold;
-  line-height: normal;
+  line-height: 3.4rem;
 }
 
 h3 {
@@ -462,7 +462,7 @@ h4 {
   font-size: 2.2rem;
   font-style: normal;
   font-weight: 600;
-  line-height: normal;
+  line-height: 2.2rem;
 }
 
 h5 {
@@ -873,6 +873,63 @@ h5 {
 
 .strategy__name {
   margin: 0 0 29px;
+}
+
+.about-us {
+  padding: 66px 0 100px;
+}
+
+.about-us__title {
+  margin: 0 0 14px;
+}
+
+.about-us__description {
+  margin: 0 0 45px;
+}
+
+.employee {
+  display: flex;
+  padding: 35px;
+  position: relative;
+  width: calc(30% - 32px);
+}
+
+.employee-container {
+  padding-right: 32px;
+}
+
+.employee__name {
+  margin: 0;
+}
+
+.employee__title {
+  margin: 0;
+  font-size: 1.4rem;
+  font-style: normal;
+  font-weight: normal;
+  line-height: 1.4rem;
+}
+
+.employee__contact {
+  color: #1943EF;
+  text-decoration: none;
+  font-size: 1.4rem;
+  font-style: normal;
+  font-weight: normal;
+  line-height: 1.4rem;
+}
+.employee__contact:hover {
+  text-decoration: underline;
+}
+
+.employee__photo {
+  width: 98px;
+  height: 98px;
+  border-radius: 50%;
+  position: absolute;
+  top: 20px;
+  right: -32px;
+  filter: drop-shadow(0px 15px 30px rgba(0, 0, 0, 0.15));
 }
 
 * {
