--- a/scss/layout/_header.scss
+++ b/scss/layout/_header.scss
@@ -8,5 +8,36 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
+  @include media-tablet {
+    padding-left: 24px;
+  }
+  @include media-mobile {
+    justify-content: center;
+  }
 }
 
+.header__logo-line {
+  display: flex;
+  align-items: center;
+}
+
+.header__hamburger{
+  @include media-mobile {
+    position: absolute;
+    left: 24px;
+  }
+}
+
+.header__buttons {
+  > .button {
+    margin-left: 14px;
+
+    &:first-child {
+      margin-left: 0;
+    }
+  }
+
+  @include media-mobile {
+    display: none;
+  }
+}
