--- a/scss/style.css
+++ b/scss/style.css
@@ -443,6 +443,14 @@ h1 {
   font-weight: 700;
   line-height: 5.4rem;
 }
+@media (max-width: 414px) {
+  h1 {
+    font-size: 3.2rem;
+    font-style: normal;
+    font-weight: bold;
+    line-height: 4.2rem;
+  }
+}
 
 h2 {
   font-size: 3.4rem;
@@ -479,12 +487,14 @@ h5 {
 
 .button {
   padding: 11px 25px 13px;
+  max-height: 53px;
   font-size: 1.6rem;
   font-style: normal;
   font-weight: 600;
   line-height: 2.2rem;
   border-radius: 4px;
   cursor: pointer;
+  white-space: nowrap;
 }
 .button_bordered {
   background: #FFFFFF;
@@ -512,12 +522,14 @@ h5 {
   color: #FF9900;
 }
 
-.header__buttons .button {
-  margin-left: 14px;
+.logo {
+  display: flex;
 }
 
-.header__buttons .button:first-child {
-  margin-left: 0;
+@media (max-width: 414px) {
+  .logo-object {
+    width: 158px;
+  }
 }
 
 .logo-svg:hover .logo-path {
@@ -630,9 +642,54 @@ h5 {
   background-color: #F5F5F5;
 }
 
+.hamburger__line, .hamburger:after, .hamburger:before {
+  content: "";
+  display: inline-block;
+  position: absolute;
+  height: 3px;
+  width: 100%;
+  background: #173A56;
+  border-radius: 5px;
+}
+
+.hamburger {
+  display: none;
+  position: relative;
+  width: 31px;
+  height: 25px;
+  margin-right: 37px;
+}
+@media (max-width: 768px) {
+  .hamburger {
+    display: inline-block;
+  }
+}
+.hamburger:before {
+  top: 0;
+  left: 0;
+}
+.hamburger:after {
+  bottom: 0;
+  left: 0;
+}
+
+.hamburger__line {
+  top: calc(50% - 1.5px);
+}
+
 .wrapper {
   max-width: 1197px;
   margin: auto;
+}
+@media (max-width: 1197px) {
+  .wrapper {
+    padding: 0 46px;
+  }
+}
+@media (max-width: 414px) {
+  .wrapper {
+    padding: 0 21px;
+  }
 }
 
 .header {
@@ -645,6 +702,40 @@ h5 {
   display: flex;
   align-items: center;
   justify-content: space-between;
+}
+@media (max-width: 768px) {
+  .header__wrapper {
+    padding-left: 24px;
+  }
+}
+@media (max-width: 414px) {
+  .header__wrapper {
+    justify-content: center;
+  }
+}
+
+.header__logo-line {
+  display: flex;
+  align-items: center;
+}
+
+@media (max-width: 414px) {
+  .header__hamburger {
+    position: absolute;
+    left: 24px;
+  }
+}
+
+.header__buttons > .button {
+  margin-left: 14px;
+}
+.header__buttons > .button:first-child {
+  margin-left: 0;
+}
+@media (max-width: 414px) {
+  .header__buttons {
+    display: none;
+  }
 }
 
 .layout-4-col {
@@ -772,6 +863,7 @@ h5 {
 
 .promo {
   padding: 30px 0;
+  overflow: hidden;
 }
 
 .promo__wrapper {
@@ -779,9 +871,24 @@ h5 {
   justify-content: space-between;
   align-items: center;
 }
+@media (max-width: 414px) {
+  .promo__wrapper {
+    flex-direction: column-reverse;
+  }
+}
 
 .promo__content {
   padding-right: 65px;
+}
+@media (max-width: 768px) {
+  .promo__content {
+    padding-right: 0;
+  }
+}
+@media (max-width: 414px) {
+  .promo__content {
+    text-align: center;
+  }
 }
 
 .promo__title {
@@ -796,9 +903,45 @@ h5 {
   font-weight: normal;
   line-height: 2.8rem;
 }
+@media (max-width: 768px) {
+  .promo__text {
+    width: 380px;
+  }
+}
+@media (max-width: 414px) {
+  .promo__text {
+    width: auto;
+  }
+}
 
+.promo__buttons {
+  display: flex;
+  align-items: center;
+}
 .promo__buttons > * {
   margin-right: 44px;
+}
+.promo__buttons > *:last-child {
+  margin-right: 0;
+}
+@media (max-width: 414px) {
+  .promo__buttons {
+    flex-direction: column;
+  }
+  .promo__buttons > * {
+    margin-right: 0;
+    margin-bottom: 26px;
+  }
+  .promo__buttons > *:last-child {
+    margin-bottom: 0;
+  }
+}
+
+@media (max-width: 414px) {
+  .promo__image {
+    max-width: 100%;
+    margin: 0 0 16px;
+  }
 }
 
 .navigation {
@@ -821,6 +964,12 @@ h5 {
 }
 .navigation__link > a:hover {
   color: #FF9900;
+}
+
+@media (max-width: 768px) {
+  .header__navigation {
+    display: none;
+  }
 }
 
 .tools__wrapper {
