--- a/scss/components/_strategies.scss
+++ b/scss/components/_strategies.scss
@@ -1,5 +1,9 @@
+// summary strategies
 .strategies {
   padding: 30px 0;
+  @include media-tablet {
+    text-align: center;
+  }
 }
 
 .strategies__title {
@@ -12,18 +16,47 @@
 
 .strategies__tags {
   margin: 0 0 31px;
+  @include media-tablet {
+    justify-content: center;
+  }
 }
 
+// strategy
 .strategy-wrapper {
   > * {
     margin: 0 0 30px;
+    @include media-tablet {
+      flex-basis: 48%;
+    }
+    @include media-mobile {
+      flex-basis: 100%;
+    }
+  }
+}
+
+.strategy {
+  cursor: pointer;
+  display: flex;
+  flex-direction: column;
+  @include media-tablet {
+    overflow: hidden;
   }
 }
 
 .strategy__content {
+  flex-grow: 1;
+  display: flex;
+  flex-direction: column;
   padding: 24px 35px 26px 33px;
 }
 
 .strategy__name {
+  flex-grow: 1;
   margin: 0 0 29px;
+  text-align: left;
+}
+
+.strategy__image {
+  flex: 0 0 200px; // image height
+  object-fit: cover;
 }
