--- a/scss/style.css
+++ b/scss/style.css
@@ -465,6 +465,14 @@ h3 {
   font-weight: bold;
   line-height: 3.4rem;
 }
+@media (max-width: 414px) {
+  h3 {
+    font-size: 2.1rem;
+    font-style: normal;
+    font-weight: bold;
+    line-height: 3.1rem;
+  }
+}
 
 h4 {
   font-size: 2.2rem;
@@ -999,6 +1007,11 @@ h5 {
 .strategies {
   padding: 30px 0;
 }
+@media (max-width: 768px) {
+  .strategies {
+    text-align: center;
+  }
+}
 
 .strategies__title {
   margin: 0 0 14px;
@@ -1011,17 +1024,53 @@ h5 {
 .strategies__tags {
   margin: 0 0 31px;
 }
+@media (max-width: 768px) {
+  .strategies__tags {
+    justify-content: center;
+  }
+}
 
 .strategy-wrapper > * {
   margin: 0 0 30px;
 }
+@media (max-width: 768px) {
+  .strategy-wrapper > * {
+    flex-basis: 48%;
+  }
+}
+@media (max-width: 414px) {
+  .strategy-wrapper > * {
+    flex-basis: 100%;
+  }
+}
+
+.strategy {
+  cursor: pointer;
+  display: flex;
+  flex-direction: column;
+}
+@media (max-width: 768px) {
+  .strategy {
+    overflow: hidden;
+  }
+}
 
 .strategy__content {
+  flex-grow: 1;
+  display: flex;
+  flex-direction: column;
   padding: 24px 35px 26px 33px;
 }
 
 .strategy__name {
+  flex-grow: 1;
   margin: 0 0 29px;
+  text-align: left;
+}
+
+.strategy__image {
+  flex: 0 0 200px;
+  object-fit: cover;
 }
 
 .about-us {
