fix: adjusted icon sizes

--- a/scss/base/_icons.scss
+++ b/scss/base/_icons.scss
@@ -1,5 +1,5 @@
 .ico {
-  cursor: pointer;
+  //cursor: pointer;
   display: inline-block;
 }
 
@@ -55,19 +55,19 @@
 
 .ico_snake {
   background-image: url("../img/icons/snake.svg");
-  width: 12px;
-  height: 17px;
+  width: 18px;
+  height: 14px;
 }
 
 .ico_heart {
   background-image: url("../img/icons/heart.svg");
-  width: 12px;
-  height: 17px;
+  width: 17px;
+  height: 15px;
 }
 
 .ico_clock {
   background-image: url("../img/icons/clock.svg");
-  width: 12px;
+  width: 15px;
   height: 17px;
 }
 
