--- a/scss/style.css
+++ b/scss/style.css
@@ -458,6 +458,14 @@ h2 {
   font-weight: bold;
   line-height: 3.4rem;
 }
+@media (max-width: 414px) {
+  h2 {
+    font-size: 2.4rem;
+    font-style: normal;
+    font-weight: bold;
+    line-height: 2.4rem;
+  }
+}
 
 h3 {
   font-size: 2.4rem;
@@ -534,9 +542,17 @@ h5 {
   display: flex;
 }
 
+.logo-object {
+  max-height: 32px;
+}
 @media (max-width: 414px) {
   .logo-object {
     width: 158px;
+    max-height: 27px;
+  }
+  .logo-object:last-child {
+    width: 129px;
+    max-height: 21px;
   }
 }
 
@@ -775,18 +791,60 @@ h5 {
 .footer {
   padding: 58px 0 72px;
 }
+@media (max-width: 768px) {
+  .footer {
+    padding: 47px 0;
+  }
+}
+@media (max-width: 414px) {
+  .footer {
+    padding: 31px 0 28px;
+  }
+}
 
 .footer__wrapper {
   display: flex;
+}
+@media (max-width: 768px) {
+  .footer__wrapper {
+    flex-direction: column;
+  }
 }
 
 .footer-navigation {
   flex-grow: 1;
   padding-left: 152px;
 }
+@media (max-width: 768px) {
+  .footer-navigation {
+    padding-left: 0;
+    margin-top: 34px;
+  }
+}
+@media (max-width: 414px) {
+  .footer-navigation {
+    flex-direction: column;
+  }
+}
 
 .footer-navigation__title {
   margin: 0 0 15px;
+}
+@media (max-width: 768px) {
+  .footer-navigation__title {
+    font-size: 2rem;
+    font-style: normal;
+    font-weight: 600;
+    line-height: 3rem;
+  }
+}
+@media (max-width: 414px) {
+  .footer-navigation__title {
+    font-size: 1.8rem;
+    font-style: normal;
+    font-weight: 600;
+    line-height: 3rem;
+  }
 }
 
 .footer-navigation__links {
@@ -803,6 +861,20 @@ h5 {
 }
 .footer-navigation__links a:hover {
   color: #FF9900;
+}
+@media (max-width: 768px) {
+  .footer-navigation__links {
+    margin-bottom: 0;
+  }
+}
+@media (max-width: 414px) {
+  .footer-navigation__links {
+    margin-bottom: 16px;
+  }
+}
+
+.footer-navigation__column:last-child .footer-navigation__links {
+  margin-bottom: 0;
 }
 
 .contact-us {
