--- a/src/scss/components/_strategies.scss
+++ b/src/scss/components/_strategies.scss
@@ -42,6 +42,11 @@
   cursor: pointer;
   display: flex;
   flex-direction: column;
+
+  &_hidden {
+    display: none;
+  }
+
   @include media-tablet {
     overflow: hidden;
   }
