--- a/src/scss/components/_tools.scss
+++ b/src/scss/components/_tools.scss
@@ -1,7 +1,7 @@
 // global tools
 .tools__wrapper {
   padding-bottom: 90px;
-  background: url(../img/backgrounds/tools-bg.svg) no-repeat center bottom;
+  background: url(/src/img/backgrounds/tools-bg.svg) no-repeat center bottom;
   background-size: 100%;
 
   @include media-tablet {
