--- a/src/scss/style.css
+++ b/src/scss/style.css
@@ -565,7 +565,7 @@ h5 {
 }
 
 .ico_play {
-  background-image: url("../img/icons/play.svg");
+  background-image: url("/src/img/icons/play.svg");
   width: 18px;
   height: 19px;
 }
@@ -604,37 +604,37 @@ h5 {
 }
 
 .ico_arrow {
-  background-image: url("../img/icons/arrow.svg");
+  background-image: url("/src/img/icons/arrow.svg");
   width: 12px;
   height: 17px;
 }
 
 .ico_snake {
-  background-image: url("../img/icons/snake.svg");
+  background-image: url("/src/img/icons/snake.svg");
   width: 18px;
   height: 14px;
 }
 
 .ico_heart {
-  background-image: url("../img/icons/heart.svg");
+  background-image: url("/src/img/icons/heart.svg");
   width: 17px;
   height: 15px;
 }
 
 .ico_clock {
-  background-image: url("../img/icons/clock.svg");
+  background-image: url("/src/img/icons/clock.svg");
   width: 15px;
   height: 17px;
 }
 
 .ico_phone {
-  background-image: url("../img/icons/phone.svg");
+  background-image: url("/src/img/icons/phone.svg");
   width: 13px;
   height: 13px;
 }
 
 .ico_letter {
-  background-image: url("../img/icons/letter.svg");
+  background-image: url("/src/img/icons/letter.svg");
   width: 11px;
   height: 11px;
 }
@@ -649,6 +649,7 @@ h5 {
 .tag {
   border-radius: 90px;
   padding: 0 14px;
+  cursor: pointer;
   font-size: 1.3rem;
   font-style: normal;
   font-weight: normal;
@@ -1110,7 +1111,7 @@ h5 {
 
 .tools__wrapper {
   padding-bottom: 90px;
-  background: url(../img/backgrounds/tools-bg.svg) no-repeat center bottom;
+  background: url(/src/img/backgrounds/tools-bg.svg) no-repeat center bottom;
   background-size: 100%;
 }
 @media (max-width: 768px) {
@@ -1221,6 +1222,9 @@ h5 {
   cursor: pointer;
   display: flex;
   flex-direction: column;
+}
+.strategy_hidden {
+  display: none;
 }
 @media (max-width: 768px) {
   .strategy {
