--- a/src/scss/components/_strategies.scss
+++ b/src/scss/components/_strategies.scss
@@ -1,4 +1,4 @@
-// summary strategies
+// chips strategies
 .strategies {
   padding: 30px 0;
   @include media-tablet {
@@ -25,7 +25,7 @@
   }
 }
 
-// strategy
+// strategy card
 .strategy-wrapper {
   > * {
     margin: 0 0 30px;
@@ -66,6 +66,11 @@
 }
 
 .strategy__image {
-  flex: 0 0 200px; // image height
+  flex: 0 0 200px;
   object-fit: cover;
+}
+
+.stub {
+  margin: 0;
+  padding: 0;
 }
